可以正常取消暂停恢复文件传输操作。增加快捷键管理以及进度配合系统进度条。

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "esbuild": "^0.25.12",
     "ws": "^8.18.3"
   },
